run-my-flask-app.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: flask-app-deployment
spec:
  selector:
    matchLabels:
      app: flask-app
  replicas: 3
  template:
    metadata:
      labels:
        app: flask-app
    spec:
      containers:
        - name: flask-app
          image: masodatc/tensorflow-flask-web-application:01
          ports:
            - containerPort: 5000
