flask-app-lb.yaml
apiVersion: v1
kind: Service
metadata:
  name: flask-app-deployment
spec:
  type: LoadBalancer
  selector:
    app: flask-app
    #department: sales
  ports:
  - protocol: TCP
    port: 60000
    targetPort: 5000
