flask-app-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: flask-app-deployment
spec:
  type: NodePort
  selector:
    app: flask-app
  ports:
    - port: 8888 # this is the external port 
      targetPort: 5000 #this port muct be the same with container port
      # Optional field
      # By default and for convenience, the Kubernetes control plane will allocate a port from a range (default: 30000-32767)
      #nodePort: 30007
