loadbalancer.yaml
apiVersion: v1
kind: Service
metadata:
  name: my-flask-app-lb
spec:
  type: LoadBalancer
  selector:
    app: my-flask-app
    department: sales
  ports:
  - protocol: TCP
    port: 60000
    targetPort: 5000
